--- a/faq.html
+++ b/faq.html
@@ -2,28 +2,36 @@
 <html>
 <head>
     <title>Amazeriffic</title>
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
     <header>
-        <h1>Amazeriffic</h1>
-        <nav>
-        <a href="#">Регистрация</a> |
-        <a href="faq.html">ВиО</a> |
-        <a href="#">Техподдержка</a>
-        </nav>
+       <div class="container">
+            <h1>Amazeriffic</h1>
+            <nav>
+            <a href="#">Регистрация</a> |
+            <a href="faq.html">ВиО</a> |
+            <a href="#">Техподдержка</a>
+            </nav>
+        </div>
     </header>
     <main>
-        <h1>FAQ</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+       <div class="container">
+            <h1>FAQ</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
     </main>
     <footer>
-        <div class="contact">
+       <div class="container">
+            <div class="contact">
             <h5>Свяжитесь с нами</h5>
             <p>Amazeriffic!</p>
             <p>555 50-я улица</p>
             <p>Татарстан, Казань 28801</p>
-        </div>
-        <div class="sitemap">
+            </div>
+            <div class="sitemap">
             <h5>Карта сайта</h5>
             <ul>
             <li><a href="index.html">Домой</a></li>
@@ -33,6 +41,7 @@
             <li><a href="faq.html">ВиО</a></li>
             <li><a href="#">Вакансии</a></li>
             </ul>
+            </div>
         </div>
     </footer>
 </body>
