Add columns (main)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
        <header>
             <div class="container">
-                <h1>Amazeriffic</h1>
+                <h1>  Amazeriffic</h1>
                 <nav>
                 <a href="#">Войти</a> |
                 <a href="faq.html">ВиО</a> |
@@ -19,6 +19,7 @@
         </header>
         <main>
            <div class="container">
+               <div class="left">
                 <h2>Amazeriffic изменит вашу жизнь!</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor  incididunt ut labore et dolore magna aliqua.</p>
                 <h3>Почему вам нужен Amazeriffic?</h3>
@@ -27,7 +28,10 @@
                 <li>Он классный</li>
                 <li>Он перевернет ваш мир</li>
                 </ul>
+               </div>
+               <div class="right">
                 <img src="lightbulb.jpg" alt="Изображение лампочки" width="300">
+               </div>
             </div>
         </main>
         <footer>
